--- a/app/src/main/res/layout/fragment_res.xml
+++ b/app/src/main/res/layout/fragment_res.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
-            name="homeViewModel"
+            name="resViewModel"
             type="com.zty.archdemo.ui.main.res.ResViewModel" />
+        <variable
+            name="clickProxy"
+            type="com.zty.archdemo.ui.main.res.ResFragment.ResFragmentClickProxy" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -17,5 +21,14 @@
             android:layout_height="match_parent"
             android:text="Res" />
 
-    </FrameLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="jump To Second Activity"
+            android:onClick="@{()->clickProxy.jumpToSecond()}"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
