--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,7 +12,13 @@
         tools:layout="@layout/fragment_host" >
         <action
             android:id="@+id/action_fragment_host_to_fragment_second"
-            app:destination="@id/second_fragment" />
+            app:destination="@id/second_fragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+
+            />
     </fragment>
     <fragment
         android:id="@+id/second_fragment"
@@ -20,5 +26,12 @@
         android:label="fragment2"
         tools:layout="@layout/fragment_second" >
     </fragment>
-
+    <fragment
+        android:id="@+id/inner_fragment"
+        android:name="com.zty.archdemo.ui.main.inner.InnerFragment"
+        android:label="fragment3"
+        tools:layout="@layout/fragment_second" >
+        <deepLink
+            app:uri="http://app/innerFragment"/>
+    </fragment>
 </navigation>
