--- a/app/src/main/res/layout/fragment_res.xml
+++ b/app/src/main/res/layout/fragment_res.xml
@@ -17,6 +17,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/mark_textView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Res" />
