--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -5,6 +5,7 @@
         <variable
             name="proxy"
             type="com.zty.archdemo.ui.navdemo.list.ListFragment.ListFragmentClickProxy" />
+         <variable type="java.lang.String"  name="number"/>
     </data>
 
     <FrameLayout
@@ -22,6 +23,8 @@
             android:onClick="@{()->proxy.clickToNext()}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@{number}"
             android:layout_gravity="end|bottom" />
 
     </FrameLayout>
