--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,10 +17,16 @@
 
         <TextView
             android:id="@+id/home_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="@{()->clcikProxy.clickRequest()}"
             android:text="Home" />
-
+        <TextView
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{()->clcikProxy.clickCancel()}"
+            android:layout_gravity="center"
+            android:text="cancel" />
     </FrameLayout>
 </layout>
